--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -1,2 +1,27 @@
 #current
-  = show_current_track
+  .title
+    Title:
+    = current_track.title
+  .artist
+    Artist:
+    = current_track.artist
+  .album
+    Album:
+    = current_track.album
+  .duration
+    == #{itunes.time_left_in_current_track}/#{current_track.time}
+
+.volume
+  - if itunes.muted?
+    = link_to 'unmute', :do => :unmute
+  - else
+    = link_to 'mute', :do => :mute
+  = link_to '-', :do => :volume_down
+  = itunes.current_volume
+  = link_to '+', :do => :volume_up
+
+.control
+  - if itunes.player_state == :playing
+    = link_to 'pause', :do => :pause
+  - else
+    = link_to 'play', :do => :play  
