--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,8 @@
 !!!Strict
-%html{html_attrs('en')}  
+%html{html_attrs('en')}
   %head
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
+    %link{:href => "/stylesheet.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
     %title= itunes.inspect
   %body
     = yield
