--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -34,9 +34,7 @@
     - unless itunes.playlist_empty?
       - current_tracks_with_indexes.each do |track, index|
         %li
-          = track.artist
-          \-
-          = track.title
+          = link_to track.description, :do => :skip, :index => index
           = link_to 'remove', :do => :remove, :index => index
           
 .library
@@ -48,6 +46,7 @@
         - itunes.find_albums_by_artist(params[:artist]).each do |album, tracks|
           %li
             = album
+            = link_to 'add', :do => :add_album, :album => album
             %ol
               - tracks.each do |track|
                 %li
