--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -1,60 +1,4 @@
-#current
-  - if !itunes.playlist_empty?
-    .title
-      Title:
-      = current_track.title
-    .artist
-      Artist:
-      = current_track.artist
-    .album
-      Album:
-      = current_track.album
-    .duration
-      == #{itunes.time_left_in_current_track}/#{current_track.time}
-  - else
-    Playlist is empty.
-
-.volume
-  - if itunes.muted?
-    = link_to 'unmute', :do => :unmute
-  - else
-    = link_to 'mute', :do => :mute
-  = link_to '-', :do => :volume_down
-  = itunes.current_volume
-  = link_to '+', :do => :volume_up
-
-.control
-  - if itunes.player_state == :playing
-    = link_to 'pause', :do => :pause
-  - else
-    = link_to 'play', :do => :play
-
-.playlist
-  %ol
-    - unless itunes.playlist_empty?
-      - current_tracks_with_indexes.each do |track, index|
-        %li
-          = link_to track.description, :do => :skip, :index => index
-          = link_to 'remove', :do => :remove, :index => index
-          
-.library
-  %ul
-    - if params[:artist]
-      = link_to 'back'
-      %fieldset
-        %legend= URI.unescape(params[:artist])
-        - itunes.find_albums_by_artist(params[:artist]).each do |album, tracks|
-          %li
-            = album
-            = link_to 'add', :do => :add_album, :album => album
-            %ol
-              - tracks.each do |track|
-                %li
-                  = track.description
-                  = link_to 'add', :do => :add, :index => track.library_index
-
-        
-    - else
-      - library_artists.each do |artist|
-        %li
-          = link_to artist, :artist => artist
+= partial :current
+= partial :controls
+= partial :playlist
+= partial :library
