--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,6 @@
   %head
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
     %link{:href => "/stylesheet.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
-    %title= itunes.inspect
+    %title controllercontroller
   %body
     = yield
