--- a/views/_playlist.haml
+++ b/views/_playlist.haml
@@ -1,13 +1,14 @@
-%fieldset
-  %legend
+%fieldset#playlist
+  %h1
     Playlist
-    = link_to 'clear', :do => :clear
+    = link_to '[clear]', :do => :clear
   .playlist
     %ol
       - unless itunes.playlist_empty?
         - itunes.current_tracks_with_indexes.each do |track, index|
-          %li
+          %li.clearfix
             = link_to track.description, :do => :skip, :index => index
+            = #link_to 'this is a super super super long title that goes acra.', '/'
             = link_to 'remove', :do => :remove, :index => index
       - else
-        Playlist is empty.
+        %li.empty Playlist is empty.
