--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,10 @@
   %head
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
     %link{:href => "/stylesheet.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
-    %title controllercontroller
+    %title iTunes Library Controller - [controllercontroller]
   %body
-    = yield
+    #container
+      %h1.logo 
+        iTunes Library Controller 
+        %small [controllercontroller]
+      = yield
