--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -8,146 +8,33 @@ html, body, h1, h2, h3, h4, h5, h6, fieldset, ul, ol, li, input, textarea, selec
   :background transparent
 fieldset, a img, img
   :border 0 
-
-// Soft Reset 
 html
   :font-size 62.5%
 body
   :color #121212
   :line-height 1.15
   :font-size 1.35em
-  :background white
-input, textarea, select, option
-  :font-size 1em
-  :background white
-p, li, dd
-  :line-height 1.5
-abbr, acronym, a
-  :padding-bottom 1px
-a, ins
-  :text-decoration none
-blockquote, dd
-  :margin 0 30px
-p, address, dl, ol, ul, fieldset, table
-  :margin-bottom 13px 
-abbr, acronym
-  :border-bottom 1px dotted
-  :cursor help
-ins, fieldset *:focus
-  :background #f2fafe  
-hr
-  :margin 12px 0
-  :clear both
-  :border 0 solid #ccc
-  :border-top-width 1px
-  :height 0
-      
-// TYPOGRAPHY   
-body, input, textarea, select, button 
   :font-family monaco, 'lucida console', monospace
-
+  :background white url(/images/bg.png) right top no-repeat
+  :background-attachment fixed
 a
   :outline 0
+  :text-decoration none
   &:link, &:visited
     :color red
   &:hover, &:active
     :color #666
-    :border-bottom 0
-address
-  :font-style normal
-  :line-height 1.35
-p
-  :letter-spacing 0.025em
-  :word-spacing 0.04em  
-code, tt, var, pre, samp
-  :font-family monospace
-  :font-size 1.15em  
-sup
-  :vertical-align top  
-sub
-  :vertical-align bottom  
-h1, h2, h3, h4, h5, h6, dt
+h1, h2, h3
   :line-height 1.35 
   :margin-bottom 18px   
   :letter-spacing -0.002em
   :word-spacing 0.15em
-h1
-  :font-size 2.05em
-h2 
-  :font-size 1.8em
-h3
-  :font-size 1.6em
-h4, dt
-  :font-size 1.35em
-  :letter-spacing 0.08em  
-h5
-  :font-size 1.05em
-  :letter-spacing 0.06em
-  :text-transform uppercase
-h6
-  :font-size 1.015em
-  :letter-spacing 0.14em
-  :font-variant small-caps
-small
-  :font-size 0.85em
-big
-  :font-size 1.25em        
-del
-  :text-decoration line-through
-
-// LISTS
-ol, ul
-  :margin-left 30px
-ol li li
-  :list-style-type lower-roman
-  li
-    :list-style-type lower-alpha     
-fieldset 
-  li
-    :list-style-type none
-  ol, ul
-    :margin-left 0
-
-// FORMS
-input, textarea
-  :padding 3px
-input.radio, input.checkbox, input.submit, input.reset
-  :padding 0
-input.radio, input.checkbox  
-  :width auto !important
-input.submit, input.reset, input.radio, input.checkbox, button, select
-  :cursor pointer
-input.hidden
-  :display none !important  
-  :height 0 !important  
-  :visibility hidden !important  
-textarea
-  :width 200px
-  :height 60px
-label
-  :display block   
-.ie legend  
-  :margin-left -9px
-
-// TABLES 
-table
-  :border-collapse collapse
-  :border-spacing 0
-  :width 100%
-th, td, caption
-  :text-align left 
-  :vertical-align middle 
-th, td
-  :border 1px solid
-  :padding 5px  
-caption
-  :margin-bottom 5px     
-
-// CLASSES
-.right
-  :float right
-.left
-  :float left    
+ol, ul, fieldset
+  :margin-bottom 13px 
+li
+  :line-height 1.5    
+fieldset li
+  :list-style-type none
 .clear, .clearfix:after 
   :clear both
   :display block
@@ -157,49 +44,28 @@ caption
   :visibility hidden
 .clearfix:after 
   :content " "
-.ie .clearfix
-  :height 1%  
-  *
-    :margin-bottom 0
-.hide
-  :display none    
-td, th
-  &.left, &.right
-    :float none  
-  &.left
-    :text-align left
-  &.right
-    :text-align right
-  &.center
-    :text-align center 
-    
-body
-  :background white url(/images/bg.png) right top no-repeat
-  :background-attachment fixed
+
     
 #container
-  :margin-left 41px
+  :margin-left 40px
+  :width 640px
   :background white
-  :width 600px
-  :padding 105px 20px 20px
   :border solid #666
   :border-width 0 1px 2px
-  :z-index 100
-  :position relative
   
 h1.logo  
+  :font-size 2.05em
   :background #666
   :color white
   :padding 10px 20px 20px
-  :position absolute
-  :width 600px
-  :top 0
-  :left 0
   small
     :display block
     :font-size 0.5em
+    :text-indent 23px
+    :background url(/images/icons/logo.png) 0 4px no-repeat
   
 fieldset
+  :padding 0 20px
   h1
     :margin-bottom 0
     :color #333
@@ -207,8 +73,13 @@ fieldset
     :background #efefef
     :border-bottom 2px solid #ccc
     :padding 5px 10px
+    :background-repeat no-repeat
+    :background-position 10px 7px
+    :text-indent 24px
     :-moz-border-radius-topleft 5px
     :-moz-border-radius-topright 5px
+    :-webkit-border-top-left-radius 5px
+    :-webkit-border-top-right-radius 5px
   li 
     :border-bottom 1px dotted #ccc
     &:first-child
@@ -244,20 +115,36 @@ fieldset
           :border 1px solid #ccc
           :background #f7f7f7
           :-moz-border-radius 3px
+          :-webkit-border-radius 3px
     ol 
       :margin-left 35px
       li
-        :list-style-type decimal-leading-zero      
+        :list-style-type decimal-leading-zero    
         :padding 5px 0
         &:first-child
           :padding-top 7px
-  &#current li
-    :background white url(/images/label_bg.gif) left top repeat-y
-    &.nothing
-      :background-image none
-      :font-style italic
-      :padding 7px 5px 3px
+  &#current 
+    h1
+      :background-image url(/images/icons/current.png)
+    li
+      :background white url(/images/label_bg.gif) left top repeat-y
+      span
+        :font-size 115%
+      &.nothing
+        :background-image none
+        :font-style italic
+        :padding 7px 5px 3px
   &#playlist
+    h1
+      :background-image url(/images/icons/playlist.png)
+      a
+        :display inline-block
+        :margin-left 10px
+        :position relative
+        :top -1px
+        :font-size 0.8em
+        :background url(/images/icons/clear.png) 0 1px no-repeat
+        :text-indent 18px
     ol
       :margin-left 35px
     li
@@ -272,17 +159,46 @@ fieldset
         :padding-top 7px      
       a
         :display block
-        :width 495px
+        :width 525px
         :margin-right 10px
         :float left
       a:last-child
-        :font-size 0.8em
-        :padding 3px 0
-        :background #efefef
-        :width 50px
-        :margin-right 10px
-        :text-align center
-        :-moz-border-radius 3px
+        :width 16px
+        :height 16px
+        :margin-top 2px
+        :background url(/images/icons/remove.png) 0 0 no-repeat
+        :text-indent -999em
+
+  &#library h1
+    :background-image url(/images/icons/library.png)
+  &#controls 
+    h1        
+      :background-image url(/images/icons/controls.png)
+    .volume span a:first-child, .volume span a:last-child, span.play a, span.pause a, span.muted a, span.unmuted a
+      :display inline-block
+      :width 16px
+      :height 16px
+      :text-indent -999em
+      :background-position 0 0 
+      :background-repeat no-repeat
+    .volume span a
+      &:first-child  
+        :background-image url(/images/icons/volume_down.png)
+      &:last-child  
+        :background-image url(/images/icons/volume_up.png)
+    span
+      &.muted a,  &.unmuted a, &.play a, &.pause a
+        :background-position 0 2px
+      &.muted a
+        :background-image url(/images/icons/mute_on.png)   
+      &.unmuted a
+        :background-image url(/images/icons/mute_off.png) 
+      &.play a, &.pause a
+        :padding-bottom 2px
+      &.play a
+        :background-image url(/images/icons/play.png)
+      &.pause a      
+        :background-image url(/images/icons/pause.png)  
         
 .artist_list, .album_list
   li:last-child
@@ -291,6 +207,7 @@ fieldset
       :border-bottom 1px dotted #ccc        
     
 .album_list
+  :padding 0
   .artist
     :background #efefef
     :padding 7px 10px
@@ -307,7 +224,8 @@ fieldset
       :margin-left 10px
       :background #333
       :font-size 0.8em
-      :-moz-border-radius 3px  
+      :-moz-border-radius 3px 
+      :-webkit-border-radius 3px 
       :background white
   h3
     :margin-bottom 0
@@ -317,16 +235,13 @@ fieldset
     :position relative
     :font-style italic
     :background #f2f2f2
-    a
-      :border 1px solid #ccc
-      :bottom 5px !important
   li  
     :position relative
     a
       :position absolute
-      :right 10px
-      :bottom 4px
-      :font-size 0.8em 
-      :background #efefef
-      :-moz-border-radius 3px 
-      :padding 3px 5px     
+      :right 16px
+      :top 9px
+      :text-indent -999em
+      :width 16px
+      :height 16px
+      :background url(/images/icons/add.png) 0 0 no-repeat    
