--- a/views/_current.haml
+++ b/views/_current.haml
@@ -4,7 +4,8 @@
     - if !itunes.playlist_empty?
       %li.title.clearfix
         %label Title:
-        %span= itunes.current_track.title
+        %span
+          %strong= itunes.current_track.title
       %li.artist.clearfix
         %label Artist:
         %span= itunes.current_track.artist
