--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -1,4 +1,8 @@
-= partial :current
-= partial :controls
-= partial :playlist
-= partial :library
+#control_box
+  .inner
+    = partial :current
+    = partial :controls
+.inner    
+  = partial :library
+  = partial :playlist
+#footer  
