styled browser area

--- a/views/_current.haml
+++ b/views/_current.haml
@@ -9,4 +9,4 @@
         = itunes.current_track.album
       %h5== #{itunes.time_left_in_current_track} / #{itunes.current_track.time}  
     - else
-      %h3 Nothin' ! 
+      %h3.empty Nothin' ! 
