--- a/views/_playlist.haml
+++ b/views/_playlist.haml
@@ -16,4 +16,5 @@
             - i = !i
       - else
         %tr
-          %td{:colspan => '3'} Playlist is empty.
+          %td{:colspan => '3'} 
+            %em Playlist is empty.
