--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -2,7 +2,7 @@
   :margin 0
   :padding 0
   :font-size 12px
-  :font-family 'lucida grande'
+  :font-family 'lucida grande', 'lucida sans unicode'
   :font-weight normal
 
 body
@@ -42,6 +42,7 @@ a
       :font-size 12px
       :top 4px
       :right 20px
+
 #footer
   :background url(/images/bgs/footer.png) 0 0 no-repeat
   :width 870px
@@ -53,6 +54,7 @@ a
   :background url(/images/bgs/body.png) 0 0 repeat-y
   .inner
     :margin 0 36px
+
 #control_box
   :height 96px
   :overflow hidden
@@ -64,8 +66,14 @@ a
     :text-align center
     :position relative
     
-#current h2
-  :font-size 13px
+#current 
+  h2
+    :font-size 13px
+  h3.empty
+    :font-size 15px
+    :position relative
+    :top 12px
+    :opacity 0.6
   
 #active_song
   :margin 3px auto 0
@@ -140,7 +148,7 @@ a
       
 #playlist
   .box
-    :max-height 200px
+    :max-height 280px
     :width 797px
     :overflow-y scroll
     :overflow-x hidden
@@ -200,14 +208,57 @@ a
   :width 797px
   :background white url(/images/bgs/library.png) left bottom repeat-x        
   :padding-bottom 8px
+  h3
+    :height 14.5px
+    :overflow hidden
+    :background url(/images/bgs/browser.png) left top no-repeat
+    :text-align center
+    :font-weight bold
+    :font-size 10px
+    :padding-top 1.5px
+    :border-bottom 1px solid #555
+    :width 398px
+    :float left
 
-#artist_list
-  /:background red  
+#library h3:last-child, #albums
+  :border-left 1px solid #555
+
+#artists, #albums
+  :float left 
   :overflow-y scroll
   :overflow-x hidden
-  :max-height 200px
-  li:hover
-    :background #3d80df
+  :height 220px
+  :border-bottom 1px solid #7f7f7f
+  :width 398.5px
+  li
+    :padding 2px 5px
     a
+      :font-size 11.3px
+      :display block
+  li, h4  
+    &:hover
+      :background #3d80df
       :color white
-  
+      a
+        :color white
+        :background-position right bottom !important 
+
+#albums
+  :width 397.5px      
+  h4, li
+    a
+      :background url(/images/buttons/add.png) right 2px no-repeat
+      :display block
+      :font-size 11.3px
+  h4
+    :padding 2px 5px
+    :border solid #efefef
+    :border-width 1px 0
+    &:first-child
+      :border-top 0  
+    a  
+      :font-weight bold
+  li
+    &:last-child
+      :padding-bottom 3px
+         
