--- a/views/_library.haml
+++ b/views/_library.haml
@@ -1,34 +1,15 @@
-#library
-  - if params[:artist]
-    .album_list
-      .artist.clearfix
-        %h2= URI.unescape(params[:artist])
-        = link_to '&laquo; back'
-      
-      %ul
-        - itunes.find_albums_by_artist(params[:artist]).each do |album, tracks|
-          %li
-            %h3
-              = album
-              = link_to '+ add', :do => :add_album, :album => album
-            %ol
-              - tracks.each do |track|
-                %li
-                  = track.description
-                  = link_to '+ add', :do => :add, :index => track.library_index
-
-  - else
-    #artist_list
-      %h3 Artists
-      %ol
-        - itunes.artists.each do |artist|
-          %li= link_to artist, :artist => artist
-    / %ul.artist_list
-    /      %li
-    /        %ul.clearfix
-    /          - itunes.artist_letters.each do |l|
-    /            %li= link_to_anchor l, l
-    /      %li
-    /        %ol
-    /          - itunes.artists.each do |artist|
-    /            %li= link_to artist, :artist => artist
+#library.clearfix
+  .headers.clearfix
+    %h3 Select Artist
+    %h3 Select Albums / Tracks
+  #artists
+    %ol
+      - itunes.artists.each do |artist|
+        %li= link_to artist, :artist => artist  
+  #albums
+    - if params[:artist]
+      - itunes.find_albums_by_artist(params[:artist]).each do |album, tracks|
+        %h4= link_to album, :do => :add_album, :album => album
+        %ol
+          - tracks.each do |track|
+            %li= link_to track.title, :do => :add, :index => track.library_index
