small language change

--- a/views/_library.haml
+++ b/views/_library.haml
@@ -1,7 +1,7 @@
 #library.clearfix
   .headers.clearfix
     %h3 Select Artist
-    %h3 Select Albums / Tracks
+    %h3 Add Albums / Tracks
   #artists
     %ol
       - itunes.artists.each do |artist|
