--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,9 @@
 %html{html_attrs('en')}
   %head
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
-    %link{:href => "/stylesheet.css", :media => "all", :rel => "stylesheet", :type => "text/css"}/
+    = stylesheet_link_tag 'stylesheet', 'slider_skin'
+    = javascript_include_tag 'jquery', 'jquery-ui-slider', 'application'
+
     %title iTunes Library Controller - [controllercontroller]
   %body
     #header.clearfix
