volume slider styles

--- a/views/_controls.haml
+++ b/views/_controls.haml
@@ -6,7 +6,7 @@
       .play= link_to 'play', :do => :play
 
   .volume.clearfix
-    #volume_slider.ui-slider-1{:style => 'margin:10px; border:1px solid blue'}
+    #volume_slider.ui-slider-1
       #volume_handle.ui-slider-handle
     / .down= link_to '(&ndash;)', :do => :volume_down
     / %h3= itunes.current_volume
