--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,8 @@
 %html{html_attrs('en')}
   %head
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
-    = stylesheet_link_tag 'stylesheet', 'slider_skin'
+    = #stylesheet_link_tag 'stylesheet', 'slider_skin'
+    = stylesheet_link_tag 'stylesheet'
     = javascript_include_tag 'jquery', 'jquery-ui-slider', 'application'
 
     %title iTunes Library Controller - [controllercontroller]
