--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,7 @@
     %meta{'http-equiv' => 'content-Type', :content => 'text/html; charset=utf-8'}/
     = #stylesheet_link_tag 'stylesheet', 'slider_skin'
     = stylesheet_link_tag 'stylesheet'
-    = javascript_include_tag 'jquery', 'jquery-ui-slider', 'application'
+    = javascript_include_tag 'jquery-1.3', 'ui.core', 'ui.slider', 'application'
 
     %title iTunes Library Controller - [controllercontroller]
   %body
